--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link rel="shortcut icon" href="coronavirus_img.png" sizes="512x512">
     <title>COVID-19 Probability Detector</title>
   </head>
 
@@ -22,16 +22,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <a target="_blank" href="http://coronavirus.app">
+              <button class="btn btn-success my-2 my-sm-0" type="submit">MAP</button>
+          </a>
           </form>
         </div>
       </nav>
@@ -39,8 +32,8 @@
           <h2 class="text-center mt-3">CoronaVirus Probability Detector</h2>
           <form action="/" method="POST">
             <div class="form-group">
-              <label for="fever">Enter Fever Value</label>
-              <input type="text" class="form-control" id="fever" name="fever" placeholder="Enter Fever Value">
+              <label for="fever">Enter Body Temperature (in Fahrenheit[°F])</label>
+              <input type="text" class="form-control" id="fever" name="fever" placeholder="in Fahrenheit[°F]">
             </div>
             <div class="form-group">
                 <label for="age">Enter your Age Value</label>
