Adding new files

--- a/templates/show.html
+++ b/templates/show.html
@@ -23,16 +23,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <a target="_blank" href="http://coronavirus.app">
+              <button class="btn btn-success my-2 my-sm-0" type="submit">MAP</button>
+          </a>
           </form>
         </div>
       </nav>
