--- a/templates/show.html
+++ b/templates/show.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="coronavirus_img.png" sizes="512x512">
     <title>COVID-19 Probability Detector</title>
+    <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5e987accc268b7001243aea3&product=inline-share-buttons" async="async"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -39,6 +40,7 @@
           </a> 
 
       </div>
+      <div class="sharethis-inline-share-buttons"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
